# CSS

./: .gitignore  File Editor - SURF OPEN OnDemand - job.html  README.md  Simulation_data_test_criticalp.csv  pyproject.toml  requirements.txt
ForestFirePercolation/: __init__.py  requirements.txt
ForestFirePercolation/Data/: SOC_All_true_075_05_3_1.csv  SOC_base_100.csv  SOC_base_200.csv  SOC_base_200_2.csv  SOC_base_300.csv  SOC_envindex075_false_0.75_0_1_1.csv  SOC_envindex1_false_1_0_1_1.csv  SOC_envindex1_true_1_0_1_1.csv  SOC_plants_false_0.75_05_3_1.csv  SOC_windenvind05_true_0.5_0_1_1.csv  Sim_env_0.25_no_plants.csv  Sim_env_0.25_plants.csv  Simulation_data_critpoints.csv  Simulation_data_exp3.csv  Simulation_data_lastsim100&500.csv  Simulation_data_lastsimVERYLAST.csv  Simulation_data_ptproportion_total.csv  Simulation_data_snellius.csv  Simulation_data_totaldensity-2.csv  Simulation_data_totaldensity.csv  critical_values_per_experiment.txt  env0.75plantprop0.5.csv  simulation_data_no_plants.csv  time_test.csv  time_test2.csv  totaldensity_extended_extra.csv  wind0.75.2.csv  wind0.75.csv  wind_env0.5_noplants.csv  wind_env0.5_noplants_critical.csv  wind_env1_noplants_.csv  wind_env1_noplants_critical.csv
ForestFirePercolation/src/: CSV.py  Simulation_data_tets.csv  critical_values.py  critsinglevalue.py  crittest.py  csv_writer.py  csv_writer_GPU.py  csv_writer_parallel.py  density_sims.py  main.py  main_2.py  main_3.py  main_generate_plots.py  main_run_gui.py  main_run_terminal.py  model.py  multi_param_multi_sim.py  multi_param_multi_sim_parallel.py  plots.py  results.py  sbatch  simulations.py  single_param_multi_sim.py
ForestFirePercolation/test/: CSV.py  test_data_collapse_plot.py  test_helper.py  test_model.py  test_multi_param_multi_sim.py  test_multi_param_multi_sim_parallel.py  (+2 more)
(+72 files in other folders)
